--- a/groupware-project/src/main/resources/application.properties
+++ b/groupware-project/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=${PORT:8080}
+# MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Local
+spring.datasource.url=jdbc:mysql://localhost:3306/groupware?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto:update
