update domains and UserRepository

--- a/groupware-project/src/main/resources/application.properties
+++ b/groupware-project/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto:update
+
+
+## Logging Level
+logging.level.org.hibernate.type.descriptor.sql=debug
+
+spring.security.user.name=root
+spring.security.user.password=root
+spring.security.user.roles=ADMIN
