--- a/groupware-project/src/main/resources/application.properties
+++ b/groupware-project/src/main/resources/application.properties
@@ -7,14 +7,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/groupware?useSSL=false&useUnic
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.show-sql=true
+# mybatis ?? ??
+mybatis.mapper-locations: mapper/*.xml
+
+#spring security ??? ?? ??
+spring.security.user.name = admin
+spring.security.user.password = 1234
 
 spring.jpa.hibernate.ddl-auto:update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
-
-## Logging Level
-logging.level.org.hibernate.type.descriptor.sql=debug
-
-spring.security.user.name=root
-spring.security.user.password=root
-spring.security.user.roles=ADMIN
