--- a/groupware-project/src/main/resources/application.properties
+++ b/groupware-project/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=${PORT:8080}
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -8,14 +7,24 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # mybatis ?? ??
-mybatis.mapper-locations: mapper/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 #spring security ??? ?? ??
 spring.security.user.name = admin
 spring.security.user.password = 1234
 
+#jpa
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 h2.console.enabled=true
+
+#fileupload size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+
+#session
+server.servlet.session.timeout=43200
+server.port=${PORT:8080}
