--- a/groupware-project/src/main/resources/application.properties
+++ b/groupware-project/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/groupware?useSSL=false&useUnic
 spring.datasource.username=root
 spring.datasource.password=root
 
+##heroku db
+#spring.datasouce.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=${JAWSDB_URL}
+#spring.datasource.username=${DATASOURCE_USERNAME}
+#spring.datasource.password=${DATASOURCE_PASSWORD}
+
 # mybatis ?? ??
 mybatis.mapper-locations=classpath:mapper/*.xml
 
