--- a/groupware-project/src/main/resources/application.yml
+++ b/groupware-project/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.password=root
 
 ##heroku db
-spring.datasouce.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://p8z2g20vg6mz1rp2:urdz19jcs0uh6sr4@au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/o0cs86urlm8clhtn
 spring.datasource.username=$groupware
 spring.datasource.password=$asdf1234!
