--- a/groupware-project/src/main/resources/application.properties
+++ b/groupware-project/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.security.user.name = admin
 spring.security.user.password = 1234
 
 #jpa
-spring.jpa.hibernate.ddl-auto:create-drop
+spring.jpa.hibernate.ddl-auto:update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
