--- a/groupware-project/src/main/resources/application.properties
+++ b/groupware-project/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Local
-spring.datasource.url=jdbc:mysql://localhost:3306/groupware?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/groupware?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 ##heroku db
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://p8z2g20vg6mz1rp2:urdz19jcs0uh6sr4@au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/o0cs86urlm8clhtn
-#spring.datasource.username=$groupware
-#spring.datasource.password=$asdf1234!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://p8z2g20vg6mz1rp2:urdz19jcs0uh6sr4@au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/o0cs86urlm8clhtn
+spring.datasource.username=$groupware
+spring.datasource.password=$asdf1234!
 
 # mybatis ?? ??
 mybatis.mapper-locations=classpath:mapper/*.xml
